# api-testing-framework

./: .gitignore  Makefile  generate_and_serve_allure_report.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
scripts/: allure_helper.py
src/api_testing_framework/: auth.py  client.py  config.py  exceptions.py  logger.py  models.py
src/api_testing_framework/spotify/: client.py
tests/: conftest.py  test_attach_on_failure.py  test_client.py  test_client_new_releases.py  test_client_top_tracks.py  test_integration.py  test_manual_attach.py  test_no_truncation.py  test_payload_redaction.py  test_payload_truncation.py  test_per_call_attach.py  test_pytest_hook_attach_on_failure.py  test_request_truncation.py  utils_allure.py
tests/spotify/: conftest.py  test_attach_on_failure_demo.py  test_attach_on_failure_integration.py  test_client_new_releases.py  test_client_top_tracks.py  test_integration_spotify.py  test_spotify_attachment_features.py  test_truncation_and_payload_sanitization.py
