[project]
name = "api-testing-framework"
version = "0.1.0"
description = "Reusable API Testing Framework for HTTP calls, validation & reporting"
authors = [
    {name = "sethorpe",email = "oluseyi.thorpe@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "tenacity (>=8.2.2,<9.0.0)",
]

[tool.poetry]
packages = [{ include="api_testing_framework", from="src" }]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
requests-mock = "^1.12.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
allure-pytest = "^2.14.2"

